Se realizan las mejoras de código sugeridas por el IDE y se formatea el código de la aplicación para seguir unas mismas guías de estilo.