@@ -1,21 +1,20 @@
 /*
-    Jabber client.
-    Copyright (C) 2010  Florencio Cañizal Calles
+ Jabber client.
+ Copyright (C) 2010  Florencio Cañizal Calles
 
-    This program is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+ This program is free software: you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation, either version 3 of the License, or
+ (at your option) any later version.
 
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
+ This program is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ You should have received a copy of the GNU General Public License
+ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-
 package org.jajim.controladores;
 
 import java.io.BufferedReader;
@@ -53,32 +52,30 @@ import org.jivesoftware.smackx.filetransfer.OutgoingFileTransfer;
 
 /**
  * @author Florencio Cañizal Calles
- * @version 1.1
- * Clase controlador que gestiona todas las operaciones vinculadas a la transfe
- * rencia de ficheros.
+ * @version 1.2 Clase controlador que gestiona todas las operaciones vinculadas a la transfe rencia de ficheros.
  */
 public class TransferenciaFicherosControlador {
 
     private static TransferenciaFicherosControlador instancia;
     private FileTransferManager ftm;
     private RecepcionFicherosListener rfl;
-    private Map<String,FileTransfer> enCurso;
-    private Map<String,String> rutas;
+    private final Map<String, FileTransfer> enCurso;
+    private final Map<String, String> rutas;
 
     /**
      * Constructor de la clase. Inicializa las variables necesarias.
      */
-    private TransferenciaFicherosControlador(){
-        enCurso = Collections.synchronizedMap(new HashMap<String,FileTransfer>());
-        rutas = Collections.synchronizedMap(new HashMap<String,String>());
+    private TransferenciaFicherosControlador() {
+        enCurso = Collections.synchronizedMap(new HashMap<String, FileTransfer>());
+        rutas = Collections.synchronizedMap(new HashMap<String, String>());
     }
 
     /**
      * Crea un manager de transferencia de ficheros a partir de una conexión.
-     * @param observer El observador que será notificado de la llegada de peticiones
-     * de transferencia de ficheros.
+     * <p>
+     * @param observer El observador que será notificado de la llegada de peticiones de transferencia de ficheros.
      */
-    public void crearManager(Observer observer){
+    public void crearManager(Observer observer) {
 
         // Recuperar la conexión
         ConexionControlador cnc = ConexionControlador.getInstancia();
@@ -91,21 +88,21 @@ public class TransferenciaFicherosControlador {
     }
 
     /**
-     * Envía el fichero ubicado en la ruta especificada a todos los contactos de
-     * la lista.
-     * @param contactos Lista de contactos a los que enviar el fichero.
-     * @param ruta La ubicación en el sistema del fichero que se quiere enviar.
+     * Envía el fichero ubicado en la ruta especificada a todos los contactos de la lista.
+     * <p>
+     * @param cvc         El controlador de la conversación.
+     * @param contactos   Lista de contactos a los que enviar el fichero.
+     * @param ruta        La ubicación en el sistema del fichero que se quiere enviar.
      * @param descripcion La descripcion del fichero.
      * @return El identificador de la transferencia.
-     * @throws FicheroNoEncontradoException Si no se encuentra el fichero que se
-     * desea eliminar
-     * @throws ImposibleEnviarFicheroException Si no se puede enviar el fichero
-     * a los contactos
-     * @throws ImposibleRecuperarParticipanteException Si no se puede recuperar
-     * el JID de los participantes de la conversación a los que se ca a mandar el
-     * fichero.
+     * <p>
+     * @throws FicheroNoEncontradoException            Si no se encuentra el fichero que se desea eliminar
+     * @throws ImposibleEnviarFicheroException         Si no se puede enviar el fichero a los contactos
+     * @throws ImposibleRecuperarParticipanteException Si no se puede recuperar el JID de los participantes de la
+     *                                                 conversación a los que se ca a mandar el fichero.
      */
-    public String enviarFichero(ConversacionControlador cvc,String[] contactos,String ruta,String descripcion) throws FicheroNoEncontradoException,ImposibleEnviarFicheroException,ImposibleRecuperarParticipanteException{
+    public String enviarFichero(ConversacionControlador cvc, String[] contactos, String ruta, String descripcion) throws
+        FicheroNoEncontradoException, ImposibleEnviarFicheroException, ImposibleRecuperarParticipanteException {
 
         String id = null;
 
@@ -113,7 +110,7 @@ public class TransferenciaFicherosControlador {
         File fichero = new File(ruta);
 
         // Comprobar si el fichero existe, de no ser así se lanzará una excepción
-        if(!fichero.exists() || !fichero.isFile()){
+        if (!fichero.exists() || !fichero.isFile()) {
             // En caso de que se produzca un error se escribe en el fichero
             // de log y se lanza una excepción
             ManejadorDeLogs mdl = ManejadorDeLogs.getManejadorDeLogs();
@@ -123,13 +120,13 @@ public class TransferenciaFicherosControlador {
 
         // Enviar el fichero a cada uno de los contactos
         OutgoingFileTransfer oft = null;
-        for(String s : contactos){
-            
+        for (String s : contactos) {
+
             String JID = null;
-            try{
+            try {
                 // Recuperar el JID del usuario para poder enviar el mensaje.
-                if(!s.contains(".")){
-                    if(cvc instanceof ConversacionControladorChatMultiusuario){
+                if (!s.contains(".")) {
+                    if (cvc instanceof ConversacionControladorChatMultiusuario) {
                         ConversacionControladorChatMultiusuario cccm = (ConversacionControladorChatMultiusuario) cvc;
                         JID = cccm.getJIDParticipante(s);
                     }
@@ -139,41 +136,45 @@ public class TransferenciaFicherosControlador {
                 }
                 oft = ftm.createOutgoingFileTransfer(JID);
 
-                oft.sendFile(fichero,descripcion);
+                oft.sendFile(fichero, descripcion);
                 id = oft.getStreamID();
-            }catch(XMPPException xe){
+            }
+            catch (XMPPException xe) {
                 // En caso de que se produzca un error se escribe en el fichero
                 // de log y se lanza una excepción
                 ManejadorDeLogs mdl = ManejadorDeLogs.getManejadorDeLogs();
                 mdl.escribir("No se puede enviar el fichero: " + ruta + "- Contacto: " + s);
                 throw new ImposibleEnviarFicheroException();
-            }catch(ImposibleRecuperarParticipanteException irp){
+            }
+            catch (ImposibleRecuperarParticipanteException irp) {
                 throw irp;
             }
         }
 
         // Guardar la última transferncia de fichero en el map
-        enCurso.put(id,oft);
+        enCurso.put(id, oft);
 
         return id;
     }
 
     /**
      * Acepta una de las peticiones de transferencia recibidas por el sistema.
+     * <p>
      * @param idTransferencia El identificador de la petición de transferencia.
-     * @param ruta La ruta en que se debe guardar el fichero que acompaña la trans
-     * ferencia.
+     * @param ruta            La ruta en que se debe guardar el fichero que acompaña la trans ferencia.
      * @return El identificador del stream y el nombre del fichero.
-     * @throws RutaNoDisponibleException Si la ruta proporcionada no es válida.
+     * <p>
+     * @throws RutaNoDisponibleException        Si la ruta proporcionada no es válida.
      * @throws ImposibleRecibirFicheroException Si no se puede recibir el fichero.
      */
-    public String[] aceptarFichero(int idTransferencia,String ruta) throws RutaNoDisponibleException,ImposibleRecibirFicheroException{
+    public String[] aceptarFichero(int idTransferencia, String ruta) throws RutaNoDisponibleException,
+        ImposibleRecibirFicheroException {
 
         String[] retornar = new String[2];
 
         // Comprobar si la ruta es válida
         File valida = new File(ruta);
-        if(!valida.isDirectory()) {
+        if (!valida.isDirectory()) {
             throw new RutaNoDisponibleException();
         }
 
@@ -185,9 +186,10 @@ public class TransferenciaFicherosControlador {
 
         // Descargar el fichero
         File f = new File(ruta + File.separator + ftr.getFileName());
-        try{
+        try {
             ift.recieveFile(f);
-        }catch(XMPPException xe){
+        }
+        catch (XMPPException xe) {
             throw new ImposibleRecibirFicheroException();
         }
 
@@ -196,20 +198,20 @@ public class TransferenciaFicherosControlador {
         retornar[1] = ftr.getStreamID();
 
         // Guardar la ruta
-        rutas.put(retornar[1],ruta);
+        rutas.put(retornar[1], ruta);
 
         // Guardar la transferencia en la lista de transferencias en curso.
-        enCurso.put(retornar[1],ift);
+        enCurso.put(retornar[1], ift);
 
         return retornar;
     }
 
     /**
-     * Rechaza la peticicón de transferencia cuyo identificador se corresponde con
-     * el suministrado.
+     * Rechaza la peticicón de transferencia cuyo identificador se corresponde con el suministrado.
+     * <p>
      * @param idTransferencia El identificador de la transferencia.
      */
-    public void rechazarFichero(int idTransferencia){
+    public void rechazarFichero(int idTransferencia) {
 
         // Recuperar la petición de transferencia de fichero
         FileTransferRequest ftr = rfl.getPeticion(idTransferencia);
@@ -220,10 +222,10 @@ public class TransferenciaFicherosControlador {
 
     /**
      * Cancela una de las tranferencias en curso.
-     * @param idTransferencia El identificador de la transferencia que se desea
-     * cancelar.
+     * <p>
+     * @param idTransferencia El identificador de la transferencia que se desea cancelar.
      */
-    public void cancelarTransferencia(String idTransferencia){
+    public void cancelarTransferencia(String idTransferencia) {
 
         // Recuperar la transferencia y cancelarla
         FileTransfer ft = enCurso.get(idTransferencia);
@@ -234,32 +236,34 @@ public class TransferenciaFicherosControlador {
         final String nombre = ft.getFileName();
         ft = null;
         final String ruta = rutas.get(idTransferencia);
-        if(ruta != null){
+        if (ruta != null) {
             rutas.remove(idTransferencia);
             // Se borra en otro hilo porque hay que esperar que finalice la can
             // celación correctamente antes de poder borrar el fichero.
             final TransferenciaFicherosControlador tfc = this;
-            Runnable r = new Runnable(){
+            Runnable r = new Runnable() {
                 @Override
-                public void run(){
-                    try{
+                public void run() {
+                    try {
                         Thread.sleep(3000);
-                        tfc.borrarFichero(nombre,ruta);
-                    }catch(InterruptedException | ImposibleBorrarFicheroException e){}
+                        tfc.borrarFichero(nombre, ruta);
+                    }
+                    catch (InterruptedException | ImposibleBorrarFicheroException e) {
+                    }
                 }
             };
-            new Thread(r,"").start();
+            new Thread(r, "").start();
         }
     }
 
     /**
      * Abre la herramienta adecuada para visualizar el fichero.
+     * <p>
      * @param nombre El nombre del fichero.
-     * @param ruta La ruta en la que está  localizado.
-     * @throws ImposibleVisualizarFicheroException Si no se encuentra la herrami
-     * enta adecuada para abrir el fichero.
+     * @param ruta   La ruta en la que está localizado.
+     * @throws ImposibleVisualizarFicheroException Si no se encuentra la herrami enta adecuada para abrir el fichero.
      */
-    public void visualizarFichero(String nombre,String ruta) throws ImposibleVisualizarFicheroException{
+    public void visualizarFichero(String nombre, String ruta) throws ImposibleVisualizarFicheroException {
 
         // Construir la URL del fichero
         String fichero = ruta + File.separator + nombre;
@@ -268,33 +272,34 @@ public class TransferenciaFicherosControlador {
 
         // Comprobar que sistema operativo se está ejecutando y actuar en conse
         // cuencia
-        try{
-            if(System.getProperty("os.name").toUpperCase().indexOf("95") != -1) {
-                Runtime.getRuntime().exec(new String[]{"command.com","/C","start",url});
+        try {
+            if (System.getProperty("os.name").toUpperCase().indexOf("95") != -1) {
+                Runtime.getRuntime().exec(new String[]{"command.com", "/C", "start", url});
             }
-            else if(System.getProperty("os.name").toUpperCase().indexOf("WINDOWS") != -1) {
-                Runtime.getRuntime().exec( new String[]{"cmd.exe", "/C", "start","\"dummy\"","\"" + url + "\""} );
+            else if (System.getProperty("os.name").toUpperCase().indexOf("WINDOWS") != -1) {
+                Runtime.getRuntime().exec(new String[]{"cmd.exe", "/C", "start", "\"dummy\"", "\"" + url + "\""});
             }
-            else if(System.getProperty("os.name").toUpperCase().indexOf("MAC") != -1) {
-                Runtime.getRuntime().exec(new String[]{"open",url});
+            else if (System.getProperty("os.name").toUpperCase().indexOf("MAC") != -1) {
+                Runtime.getRuntime().exec(new String[]{"open", url});
             }
-            else if(System.getProperty("os.name").toUpperCase().indexOf("LINUX") != -1){
+            else if (System.getProperty("os.name").toUpperCase().indexOf("LINUX") != -1) {
                 String desktop = this.getLinuxDesktop();
                 switch (desktop) {
                     case "kde":
-                        Runtime.getRuntime().exec(new String[]{"kfmclient","exec",url});
+                        Runtime.getRuntime().exec(new String[]{"kfmclient", "exec", url});
                         break;
                     case "gnome":
-                        Runtime.getRuntime().exec(new String[]{"gnome-open",url});
+                        Runtime.getRuntime().exec(new String[]{"gnome-open", url});
                         break;
                     case "xfce":
-                        Runtime.getRuntime().exec(new String[]{"exo-open",url});
+                        Runtime.getRuntime().exec(new String[]{"exo-open", url});
                         break;
                     default:
                         throw new ImposibleVisualizarFicheroException();
                 }
             }
-        }catch(IOException ie){
+        }
+        catch (IOException ie) {
             // En caso de que se produzca un error se escribe en el fichero
             // de log y se lanza una excepción
             ManejadorDeLogs mdl = ManejadorDeLogs.getManejadorDeLogs();
@@ -305,50 +310,50 @@ public class TransferenciaFicherosControlador {
 
     /**
      * Pregunta en sistemas linux si existe una determinada variable.
+     * <p>
      * @param envvar La variable que se va a consultar.
-     * @return Cadena vacia si no se encuentra la variable y su valor si se encuen
-     * tra.
+     * @return Cadena vacia si no se encuentra la variable y su valor si se encuen tra.
      */
-    private String getEnv(String envvar){
+    private String getEnv(String envvar) {
 
         // Lanzar un proceso que pregunta pou una determinada variable, recuperar
         // la salida y delvolver una cadena vacia áquella no se encuentra o su re
         // sultado si se encuentra.
-        try{
-            String[] cmd = { "/bin/sh", "-c", "echo $" +  envvar};
+        try {
+            String[] cmd = {"/bin/sh", "-c", "echo $" + envvar};
             Process p = Runtime.getRuntime().exec(cmd);
             BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));
             String value = br.readLine();
-            if(value == null) {
+            if (value == null) {
                 return "";
             }
             else {
                 return value.trim();
             }
         }
-        catch(Exception error){
-          return "";
+        catch (IOException error) {
+            return "";
         }
     }
 
     /**
-     * Devuelve una cadena con el tipo de escritorio en el que nos encontramos si
-     * estamos en un sistema operativo tipo linux.
-     * @return Cadena con el nombre del escritorio o cadena vacia si no se encuen
-     * tra un escritorio válido.
+     * Devuelve una cadena con el tipo de escritorio en el que nos encontramos si estamos en un sistema operativo tipo
+     * linux.
+     * <p>
+     * @return Cadena con el nombre del escritorio o cadena vacia si no se encuen tra un escritorio válido.
      */
-    private String getLinuxDesktop(){
+    private String getLinuxDesktop() {
 
         // Preguntar por variables que sólo están disponibles en determinados tipos
         // de escritorio.
         String linuxDesktop = null;
-        if(!getEnv("KDE_FULL_SESSION").equals("") || !getEnv("KDE_MULTIHEAD").equals("")) {
+        if (!getEnv("KDE_FULL_SESSION").equals("") || !getEnv("KDE_MULTIHEAD").equals("")) {
             linuxDesktop = "kde";
         }
-        else if(!getEnv("GNOME_DESKTOP_SESSION_ID").equals("") || !getEnv("GNOME_KEYRING_SOCKET").equals("")) {
+        else if (!getEnv("GNOME_DESKTOP_SESSION_ID").equals("") || !getEnv("GNOME_KEYRING_SOCKET").equals("")) {
             linuxDesktop = "gnome";
         }
-        else if(getEnv("DESKTOP_SESSION").contains("xfce")) {
+        else if (getEnv("DESKTOP_SESSION").contains("xfce")) {
             linuxDesktop = "xfce";
         }
         else {
@@ -359,20 +364,19 @@ public class TransferenciaFicherosControlador {
     }
 
     /**
-     * Borra del sistema el fichero cuyo nombre y ruta se corresponden con los
-     * proporcionados.
+     * Borra del sistema el fichero cuyo nombre y ruta se corresponden con los proporcionados.
+     * <p>
      * @param nombre El nombre del fichero.
-     * @param ruta La ubicación donde se encuentra almacenado.
-     * @throws ImposibleBorrarFicheroException Si no se puede borrar el fichero
-     * del sistema.
+     * @param ruta   La ubicación donde se encuentra almacenado.
+     * @throws ImposibleBorrarFicheroException Si no se puede borrar el fichero del sistema.
      */
-    public void borrarFichero(String nombre,String ruta) throws ImposibleBorrarFicheroException{
+    public void borrarFichero(String nombre, String ruta) throws ImposibleBorrarFicheroException {
 
         String fichero = ruta + File.separator + nombre;
         File f = new File(fichero);
         boolean ficheroBorrado = f.delete();
 
-        if(!ficheroBorrado){
+        if (!ficheroBorrado) {
             // En caso de que se produzca un error se escribe en el fichero
             // de log y se lanza una excepción
             ManejadorDeLogs mdl = ManejadorDeLogs.getManejadorDeLogs();
@@ -382,15 +386,15 @@ public class TransferenciaFicherosControlador {
     }
 
     /**
-     * Cambia el nombre del fichero cuyos valores se corresponden con los propor
-     * cionados.
-     * @param nombre El nombre que tiene el fichero.
-     * @param ruta La ruta en la que se encuentra localizado.
+     * Cambia el nombre del fichero cuyos valores se corresponden con los propor cionados.
+     * <p>
+     * @param nombre      El nombre que tiene el fichero.
+     * @param ruta        La ruta en la que se encuentra localizado.
      * @param nuevoNombre El nuevo nombre del fichero.
-     * @throws ImposibleRenombrarFicheroException Si no se puede cambiar el nombre
-     * del fichero.
+     * @throws ImposibleRenombrarFicheroException Si no se puede cambiar el nombre del fichero.
      */
-    public void renombrarFichero(String nombre,String ruta,String nuevoNombre) throws ImposibleRenombrarFicheroException{
+    public void renombrarFichero(String nombre, String ruta, String nuevoNombre) throws
+        ImposibleRenombrarFicheroException {
 
         // Conseguir los paths de los ficheros viejos y nuevos
         File ficheroViejo = new File(ruta + File.separator + nombre);
@@ -400,7 +404,7 @@ public class TransferenciaFicherosControlador {
         boolean correcto = ficheroViejo.renameTo(ficheroNuevo);
 
         // Si no se ha podido renombrar el fichero devolver una excepción
-        if(!correcto){
+        if (!correcto) {
             // En caso de que se produzca un error se escribe en el fichero
             // de log y se lanza una excepción
             ManejadorDeLogs mdl = ManejadorDeLogs.getManejadorDeLogs();
@@ -410,14 +414,14 @@ public class TransferenciaFicherosControlador {
     }
 
     /**
-     * Método que mueve el fichero que se corresponde con los valores proporciona
-     * dos a la nueva ruta especificada.
-     * @param nombre El nombre del fichero.
-     * @param ruta Su ruta actual.
+     * Método que mueve el fichero que se corresponde con los valores proporciona dos a la nueva ruta especificada.
+     * <p>
+     * @param nombre    El nombre del fichero.
+     * @param ruta      Su ruta actual.
      * @param nuevaRuta La nueva ruta para el fichero.
      * @throws ImposibleReubicarFicheroException Si no se puede mover el fichero.
      */
-    public void reubicarFichero(String nombre,String ruta,String nuevaRuta) throws ImposibleReubicarFicheroException{
+    public void reubicarFichero(String nombre, String ruta, String nuevaRuta) throws ImposibleReubicarFicheroException {
 
         // Conseguir los paths de los ficheros viejos y nuevos
         File ficheroViejo = new File(ruta + File.separator + nombre);
@@ -427,7 +431,7 @@ public class TransferenciaFicherosControlador {
         boolean correcto = ficheroViejo.renameTo(ficheroNuevo);
 
         // Si no se ha podido reubicar el fichero devolver una excepción
-        if(!correcto){
+        if (!correcto) {
             // En caso de que se produzca un error se escribe en el fichero
             // de log y se lanza una excepción
             ManejadorDeLogs mdl = ManejadorDeLogs.getManejadorDeLogs();
@@ -438,12 +442,11 @@ public class TransferenciaFicherosControlador {
 
     /**
      * Elimina la transferencia de la lista de tansferencias en curso.
-     * @param idTransferencia El identificador de la transferencia que se va a
-     * eliminar.
-     * @return Retorna un array con el nombre y la ruta del fichero de la tansfe
-     * rencia.
+     * <p>
+     * @param idTransferencia El identificador de la transferencia que se va a eliminar.
+     * @return Retorna un array con el nombre y la ruta del fichero de la tansfe rencia.
      */
-    public synchronized String[] cerrarTransferencia(String idTransferencia){
+    public synchronized String[] cerrarTransferencia(String idTransferencia) {
 
         // Recuparar el nombre y la ruta del fichero
         String[] datos = new String[2];
@@ -461,25 +464,29 @@ public class TransferenciaFicherosControlador {
     /**
      * Cancela todas las transferencias en curso y las elimina de la lista.
      */
-    public void abortarTransferencias(){
+    public void abortarTransferencias() {
 
         // Recuperar la colección de transferencias
         Collection<FileTransfer> collection = enCurso.values();
 
         // Cancelarlas una a una
         Iterator<FileTransfer> iterator = collection.iterator();
-        while(iterator.hasNext()){
+        while (iterator.hasNext()) {
 
             FileTransfer ft = iterator.next();
             ft.cancel();
 
             // Esperar hasta que la transferencia esté cancelada
             boolean t = true;
-            while(t){
-                if(ft.getStatus() == FileTransfer.Status.cancelled) {
+            while (t) {
+                if (ft.getStatus() == FileTransfer.Status.cancelled) {
                     t = false;
                 }
-                try{Thread.sleep(500);}catch(Exception e){}
+                try {
+                    Thread.sleep(500);
+                }
+                catch (InterruptedException e) {
+                }
             }
         }
 
@@ -488,10 +495,9 @@ public class TransferenciaFicherosControlador {
     }
 
     /**
-     * Limpiar la información necesaria en el controlador para poder hacer otra
-     * conexión.
+     * Limpiar la información necesaria en el controlador para poder hacer otra conexión.
      */
-    public void desconectar(){
+    public void desconectar() {
         // Desconectar al oyente y poner el manager y el oyente a null
         rfl.desconectar();
         rfl = null;
@@ -500,30 +506,33 @@ public class TransferenciaFicherosControlador {
     }
 
     /**
-     * Retorna el progreso de una determinada transferencia. Es un valor entre 0
-     * y 1.
+     * Retorna el progreso de una determinada transferencia. Es un valor entre 0 y 1.
+     * <p>
      * @param idTransferencia el identificador de la transferencia.
      * @return El progreso de la transferencia.
      */
-    public synchronized double getProgresoTransferencia(String idTransferencia){
+    public synchronized double getProgresoTransferencia(String idTransferencia) {
 
         // Recuperar la transferencia
         FileTransfer ft = enCurso.get(idTransferencia);
 
         double progreso = ft.getProgress();
 
-        if(ft.getStatus() == FileTransfer.Status.refused || (ft.getStatus() == FileTransfer.Status.complete && (progreso * 100) != 100)){
+        if (ft.getStatus() == FileTransfer.Status.refused || (ft.getStatus() == FileTransfer.Status.complete
+            && (progreso * 100) != 100)) {
             // Retornar -1 para informar de que se ha cancelado la transferencia
             progreso = -1;
             // Limpiar las variables necesarias
             enCurso.remove(idTransferencia);
             String nombre = ft.getFileName();
             String ruta = rutas.get(idTransferencia);
-            if(ruta != null){
+            if (ruta != null) {
                 rutas.remove(idTransferencia);
-                try{
-                    this.borrarFichero(nombre,ruta);
-                }catch(ImposibleBorrarFicheroException ibfe){}
+                try {
+                    this.borrarFichero(nombre, ruta);
+                }
+                catch (ImposibleBorrarFicheroException ibfe) {
+                }
             }
         }
 
@@ -532,26 +541,27 @@ public class TransferenciaFicherosControlador {
     }
 
     /**
-     * Método que retorna un array con los identificadores de las transferencias
-     * mantenidas con el contacto especificado.
+     * Método que retorna un array con los identificadores de las transferencias mantenidas con el contacto
+     * especificado.
+     * <p>
      * @param contacto El contacto del que se quieren recuperar las transferencias.
      * @return Un array con los identificadores de las transferencias.
      */
-    public String[] getIdentificadoresTransferencias(String contacto){
-        
+    public String[] getIdentificadoresTransferencias(String contacto) {
+
         String[] identificadores = null;
         List<String> auxiliar = new ArrayList<>();
 
         // Recorrer la lista de transferencias y almacenar el identificador
-        Set<Entry<String,FileTransfer>> conjunto = enCurso.entrySet();
-        Iterator <Entry<String,FileTransfer>> iterator = conjunto.iterator();
-        while(iterator.hasNext()){
-            Entry<String,FileTransfer> entrada = iterator.next();
+        Set<Entry<String, FileTransfer>> conjunto = enCurso.entrySet();
+        Iterator<Entry<String, FileTransfer>> iterator = conjunto.iterator();
+        while (iterator.hasNext()) {
+            Entry<String, FileTransfer> entrada = iterator.next();
             FileTransfer ft = entrada.getValue();
             String par = ft.getPeer();
             int posicion = par.indexOf("/");
-            par = par.substring(0,posicion);
-            if(par.compareTo(contacto) == 0){
+            par = par.substring(0, posicion);
+            if (par.compareTo(contacto) == 0) {
                 auxiliar.add(entrada.getKey());
             }
         }
@@ -563,12 +573,12 @@ public class TransferenciaFicherosControlador {
 
     /**
      * Método para implementar el patrón Singleton.
-     * @return La única instancia disponible del gestor de transferencias de
-     * ficheros.
+     * <p>
+     * @return La única instancia disponible del gestor de transferencias de ficheros.
      */
-    public static synchronized TransferenciaFicherosControlador getInstancia(){
+    public static synchronized TransferenciaFicherosControlador getInstancia() {
 
-        if(instancia == null) {
+        if (instancia == null) {
             instancia = new TransferenciaFicherosControlador();
         }
 
